# Django-Project-Template

./: .env.example  .gitignore  Makefile  manage.py  pyproject.toml
apps/core/: apps.py  functions.py  middleware.py  models.py  urls.py  views.py
apps/core/templates/core/errors/: 403.html  404.html
apps/users/: admin.py  apps.py  models.py  views.py
apps/users/migrations/: 0001_initial.py
project_name/: asgi.py  urls.py  wsgi.py
project_name/settings/: base.py  development.py  django_unfold.py  logs.py  production.py  saml.py
requirements/: base.txt  dev.txt
theme/static_src/: package-lock.json  package.json
